<html>
  <head>
    <style type='text/css'>
      a            { color:#a0a0e0 }
      div.title    { 
          color:#C0F0C0; 
          font-size:1.2em; 
          font-weight:bold; 
          margin-top:1em; 
          margin-bottom:0.5em; 
          text-align:center }
      div.subtitle { 
          color:#C0F0C0; 
          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
$ 2.0.4
  % Version 2.0.4
  _ 2014-06-19
    * The plus and minus signs on the count buttons have been made clearer.
$ 2.0.3
  % Version 2.0.3
  _ 2014-06-18
    * The delete button for projects has been added back and should now work properly.
$ 2.0.2
  % Version 2.0.2
  _ 2014-06-17
    * A preliminary French translation has been added.
    * A small background image error on the welcome screen has been fixed.
    * A crash bug when setting a background image has been addressed.
    * Project deletion has revered back to long-pressing a row, for now (apologies).
$ 2.0.1
  % Version 2.0.1
  _ 2014-06-15
  ! Please back up your data before proceeding! The export option from the menu above can be used for this purpose.
    * Projects can now be deleted with a button rather than a long press.
    * Some links can't be imported, but BeeCount will no longer crash if this happens.
$ 2.0.0
  % Version 2.0.0
  _ 2014-06-14
  ! BeeCount 2.0!
    * Multiple alerts and tablet layouts added.
    * Various other UI improvements.
    * Much code refactoring to make maintenance and further development easier.
$ END_OF_CHANGE_LOG
  </body>
</html>