@@ -19,9 +19,41 @@
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:id="@+id/dynamic_widget_area">
+                android:layout_weight="5">
+                <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:id="@+id/dynamic_widget_area">
                 <!-- all the count widgets will go in here -->
+
+                </LinearLayout>
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+                    <Space
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"/>
+
+                    <Button
+                            android:id="@+id/clearCountButton"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:onClick="saveAndExit"
+                            android:layout_weight="2"
+                            android:text="@string/saveCountsButton"
+                            android:maxLines="1">
+                    </Button>
+
+                    <Space
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"/>
+
+                </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
