@@ -36,7 +36,6 @@
                     android:layout_height="wrap_content"
                     android:onClick="newCount"
                     android:layout_weight="1"
-                    style="?android:attr/buttonBarButtonStyle"
                     android:text="@string/labelNewCountButton"
                     android:maxLines="1">
                 </Button>
@@ -46,7 +45,6 @@
                     android:layout_height="wrap_content"
                     android:onClick="newLink"
                     android:layout_weight="1"
-                    style="?android:attr/buttonBarButtonStyle"
                     android:text="@string/addLinkButton"
                     android:maxLines="1">
                 </Button>
@@ -56,7 +54,6 @@
                     android:layout_height="wrap_content"
                     android:onClick="saveAndExit"
                     android:layout_weight="1"
-                    style="?android:attr/buttonBarButtonStyle"
                     android:text="@string/labelNewprojSaveButton"
                     android:maxLines="1">
                 </Button>
